Added 2fa implementation and some models.
