# WebModuleTeko/Models/RegisterUserModel.cs
@@ -1,0 +1,8 @@
+﻿namespace WebModuleTeko.Models;
+
+public class RegisterUserModel
+{
+    public string Username { get; set; } = null!;
+    public string Email { get; set; } = null!;
+    public string Password { get; set; } = null!;
+}
