# WebModuleTeko/Models/TotpModel.cs
@@ -1,0 +1,9 @@
+﻿namespace WebModuleTeko.Models;
+
+public class TotpModel
+{
+    public string Image { get; set; } = null!;
+    public string SetupCode { get; set; } = null!;
+    public string Uri { get; set; } = null!;
+
+}
