# WebModuleTeko/Models/Validators/RegisterUserModelValidator.cs
@@ -1,0 +1,13 @@
+﻿using FluentValidation;
+
+namespace WebModuleTeko.Models.Validators;
+
+public class RegisterUserModelValidator : AbstractValidator<RegisterUserModel>
+{
+
+    public RegisterUserModelValidator()
+    {
+        RuleFor(user => user);
+    }
+
+}
